--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,46 @@ html, body {
     padding: 0;
     font-family: 'Barlow';
 }
+header {
+    display: flex;
+    flex-direction: row;
+}
 h1 {
     font-size: 2.5rem;
+    line-height: 1.5rem;
     padding-left: 1rem;
 }
-.nav-logo {
-    height: 1.3rem;
+hr {
+    margin: 0;
+}
+main {
+    text-align: left;
+    padding-left: 1rem;
+}
+main ul {
+    list-style-type: none;
+    padding-left: 1rem;
+}
+.clock {
+    margin-left: 1.2rem;
+    margin-top: 1.8rem;
+    font-size: 1.2rem;
+}
+.App {
+    max-width: 700px;
+    margin: auto;
+}
+nav {
+    display: flex;
+    width: 100%;
+}
+nav > ul {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 1.5rem;
+}
+nav > ul > li {
+    float: left;
+    margin-right: 1rem;
+    color: lightgrey;
 }
