--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,12 @@ hr {
 }
 main {
     text-align: left;
-    padding-left: 1rem;
+    padding-left: 0.5rem;
 }
 main ul {
     list-style-type: none;
     padding-left: 1rem;
+    padding-right: 1rem;
 }
 .clock {
     margin-left: 1.2rem;
@@ -38,13 +39,16 @@ nav {
     display: flex;
     width: 100%;
 }
-nav > ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding-left: 1.5rem;
 }
-nav > ul > li {
+nav ul li {
     float: left;
     margin-right: 1rem;
     color: lightgrey;
+}
+img {
+    max-width: 300px;
 }
