--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Barlow';
+    line-height: 1.2rem;
 }
 header {
     display: flex;
@@ -54,4 +55,16 @@ img {
 }
 input {
     width: 70%;
+    margin-left: 10px;
+}
+select {
+    margin-left: 10px;
+} 
+textarea {
+    margin-left: 5px;
+}
+form {
+    padding: 10px;
+    margin: 10px;
+    line-height: 2rem;
 }
