--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ nav ul {
 nav ul li {
     float: left;
     margin-right: 1rem;
-    color: lightgrey;
+    color: grey;
 }
 img {
     max-width: 300px;
@@ -67,4 +67,7 @@ form {
     padding: 10px;
     margin: 10px;
     line-height: 2rem;
+}
+a {
+    text-decoration: none;
 }
