--- a/src/App.css
+++ b/src/App.css
@@ -4,70 +4,193 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Barlow';
-    line-height: 1.2rem;
+    box-sizing: content-box;
+    background-color: rgb(242, 246, 250);
+}
+.App {
+    max-width: 650px;
+    min-width: 370px;
+    margin: auto;
+    height: 100vh;
+}
+.logo {
+    width: 3rem;
+    height: 3rem;
+    margin-top: 1.1rem;
+    margin-left: 0.6rem;
+}
+a {
+    text-decoration: none;
+    color: black;
 }
 header {
+    margin-top: 0.5rem;
     display: flex;
     flex-direction: row;
-}
-h1 {
-    font-size: 2.5rem;
-    line-height: 1.5rem;
-    padding-left: 1rem;
-}
-hr {
-    margin: 0;
-}
-main {
-    text-align: left;
-    padding-left: 0.5rem;
-}
-main ul {
-    list-style-type: none;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    flex-wrap: nowrap;
 }
 .clock {
     margin-left: 1.2rem;
     margin-top: 1.8rem;
     font-size: 1.2rem;
 }
-.App {
-    max-width: 700px;
-    margin: auto;
+h1 {
+    font-size: 2.5rem;
+    line-height: 1.5rem;
+    padding-left: 1rem;
+    white-space: nowrap;
+}
+main {
+    text-align: left;
+    margin-left: 1rem;
+    margin-right: 1rem;
+
+}
+main ul {
+    list-style-type: none;
+    padding: 0;
+    margin-left: 0;
+    padding-bottom: 0.5rem;
+    margin-block-end: 0;
+}
+main li {
+    margin: 0;
 }
 nav {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    margin-bottom: 1.2rem;;
+}
+button {
+    font-family: 'Barlow';
+}
+.nav-button {
+    text-align: center;
+    margin-right: 0.6rem;
+    display: block;
+    background-color: white;
+    border-radius: 0.25rem;
+    width: 3.5rem;
+    padding: 0.22rem 0.4rem 0.1rem 0.4rem;
+    color: rgb(100, 100, 100);
+    font-size: 0.9rem;
+    line-height: 0.8rem;
+}
+.nav-button-profile {
+    padding: 0.1rem;
+    width: 1.4rem;
+    margin-right: 0;
+
+}
+.selected {
+    background-color: #3DCAF2;
+    color: white;
+    font-weight: bold;
+}
+.profile-icon {
+    width: 1.1rem;
+}
+.article-preview {
+    line-height: 1.2rem;
+    background-color: rgb(255, 255, 255);
+    border-radius: 0.4rem;
+    padding: 0.5rem;
+    margin-bottom: 0.8rem;
+    font-size: 14px;
+}
+.by-at {
     display: flex;
-    width: 100%;
+    justify-content: space-between;
 }
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 1.5rem;
+.article-title {
+    margin-top: 0.1rem;
+    margin-bottom: 0.8rem;
+    font-size: 20px;
+    line-height: 1.6rem;
 }
-nav ul li {
-    float: left;
-    margin-right: 1rem;
-    color: grey;
+label {
+    font-size: 11px;
+    padding: 1px;
 }
-img {
-    max-width: 300px;
+.vote-button {
+    background-color: white;
+    border: none;
+}
+.vote-commentcount {
+    display: flex;
+    justify-content: space-between;
+}
+.vote-arrow {
+    height: 1rem;
+    width: 1rem;
+    position: relative;
+    top: 0.15rem;
+
+}
+.preview-text {
+    margin-left: 0.8rem;
+    margin-right: 0.8rem;
+    font-size: 14px;
+}
+.author-category {
+    margin-bottom: 0.5rem;
+}
+.page-buttons {
+    padding-bottom: 1rem;
+}
+.page-buttons button {
+    border: none;
+    background-color: rgb(242, 246, 250);
+}
+.time {
+    font-size: 10px;
+}
+.blue-link {
+    color:  #20677a;
+}
+.add-topic {
+    border: none;
+    text-align: center;
+    background-color: white;
+    border-radius: 0.25rem;
+    padding: 0.1rem 1rem 0.2rem 1rem;
+    color: rgb(100, 100, 100);
+    font-size: 0.9rem;
+}
+.slug {
+    font-size: 18px;
+    margin-bottom: 0.8rem;
+    margin-top: 1.2rem;
+}
+.topic-description {
+    margin-bottom: 2rem;
+}
+select {
+    border-radius: 2px;
+    border: none;
+    font-family: 'Barlow';
+    font-size: 11px;
+    padding: 1px;
+    margin-left: 3px;
+    margin-right: 3px;
+}
+.avatar {
+    width: 150px;
 }
 input {
     width: 70%;
-    margin-left: 10px;
 }
-select {
-    margin-left: 10px;
-} 
 textarea {
     margin-left: 5px;
 }
-form {
-    padding: 10px;
-    margin: 10px;
-    line-height: 2rem;
-}
-a {
-    text-decoration: none;
+.user-list-box {
+    background-color: white;
+    border-radius: 0.4rem;
+    padding: 0.5rem;
+    margin-bottom: 0.8rem;
+    display: flex;
+    justify-content: space-between;
 }
