--- a/src/App.css
+++ b/src/App.css
@@ -180,7 +180,8 @@ select {
     margin-right: 3px;
 }
 .avatar {
-    width: 150px;
+    max-width: 150px;
+    max-height: 200px;
 }
 textarea {
     margin-left: 5px;
@@ -193,7 +194,7 @@ textarea {
     margin-bottom: 0.8rem;
     display: flex;
     justify-content: space-between;
-    width: 400px;
+    width: 350px;
 }
 form li {
     margin-bottom: 1rem;
@@ -259,5 +260,8 @@ article {
     font-size: 14px;
 }
 .delete-edit {
+    margin-right: 1rem;
+}
+.edit-account button {
     margin-right: 1rem;
 }
