--- a/src/App.css
+++ b/src/App.css
@@ -265,3 +265,16 @@ article {
 .edit-account button {
     margin-right: 1rem;
 }
+.own-comment {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.vote-display {
+    background-color: white;
+    border-radius: 0.25rem;
+    padding: 0.1rem 1rem 0.2rem 1rem;
+    color: rgb(100, 100, 100);
+    font-size: 0.9rem;
+    width: fit-content;
+}
