--- a/src/App.css
+++ b/src/App.css
@@ -13,26 +13,14 @@ html, body {
     margin: auto;
     height: 100vh;
 }
-.logo {
-    width: 3rem;
-    height: 3rem;
-    margin-top: 1.1rem;
-    margin-left: 0.6rem;
+main {
+    text-align: left;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 a {
     text-decoration: none;
     color: black;
-}
-header {
-    margin-top: 0.5rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-}
-.clock {
-    margin-left: 1.2rem;
-    margin-top: 1.8rem;
-    font-size: 1.2rem;
 }
 h1 {
     font-size: 2.5rem;
@@ -40,113 +28,39 @@ h1 {
     padding-left: 1rem;
     white-space: nowrap;
 }
-main {
-    text-align: left;
-    margin-left: 1rem;
-    margin-right: 1rem;
-
-}
-main ul {
+ul {
     list-style-type: none;
     padding: 0;
     margin-left: 0;
     padding-bottom: 0.5rem;
     margin-block-end: 0;
 }
-main li {
+li {
     margin: 0;
-}
-nav {
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    margin-top: 0.5rem;
-    margin-left: 1rem;
-    margin-bottom: 1.2rem;;
 }
 button {
     font-family: 'Barlow';
-}
-.nav-button {
-    text-align: center;
-    margin-right: 0.6rem;
-    display: block;
-    background-color: white;
-    border-radius: 0.25rem;
-    width: 3.5rem;
-    padding: 0.22rem 0.4rem 0.1rem 0.4rem;
-    color: rgb(100, 100, 100);
-    font-size: 0.9rem;
-    line-height: 0.8rem;
-}
-.nav-button-profile {
-    padding: 0.1rem;
-    width: 1.4rem;
-    margin-right: 0;
-
-}
-.selected {
-    background-color: #3DCAF2;
-    color: white;
-    font-weight: bold;
-}
-.profile-icon {
-    width: 1.1rem;
-}
-.article-preview {
-    line-height: 1.2rem;
-    background-color: rgb(255, 255, 255);
-    border-radius: 0.4rem;
-    padding: 0.5rem;
-    margin-bottom: 0.8rem;
-    font-size: 14px;
-}
-.by-at {
-    display: flex;
-    justify-content: space-between;
-}
-.article-title {
-    margin-top: 0.1rem;
-    margin-bottom: 0.8rem;
-    font-size: 20px;
-    line-height: 1.6rem;
 }
 label {
     font-size: 11px;
     padding: 1px;
 }
-.vote-button {
-    background-color: white;
+select {
+    border-radius: 2px;
     border: none;
+    font-family: 'Barlow';
+    font-size: 11px;
+    padding: 1px;
+    margin-left: 3px;
+    margin-right: 3px;
 }
-.vote-commentcount {
-    display: flex;
-    justify-content: space-between;
-}
-.vote-arrow {
-    height: 1rem;
-    width: 1rem;
-    position: relative;
-    top: 0.15rem;
-
-}
-.preview-text {
-    margin-left: 0.8rem;
-    margin-right: 0.8rem;
-    font-size: 14px;
-}
-.author-category {
-    margin-bottom: 0.5rem;
-}
-.page-buttons {
-    padding-bottom: 1rem;
-}
-.page-buttons button {
+textarea {
     border: none;
-    background-color: rgb(242, 246, 250);
-}
-.time {
-    font-size: 10px;
+    width: 22rem;
+    height: 14rem;
+    vertical-align: top;
+    margin-left: 1rem;
+    font-family: 'Barlow';
 }
 .blue-link {
     color:  #20677a;
@@ -160,33 +74,128 @@ label {
     color: rgb(100, 100, 100);
     font-size: 0.9rem;
 }
-.slug {
+
+
+header {
+    margin-top: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+.header__logo {
+    width: 3rem;
+    height: 3rem;
+    margin-top: 1.1rem;
+    margin-left: 0.6rem;
+}
+.header__clock {
+    margin-left: 1.2rem;
+    margin-top: 1.8rem;
+    font-size: 1.2rem;
+}
+
+nav {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    margin-bottom: 1.2rem;;
+}
+.nav__button {
+    text-align: center;
+    margin-right: 0.6rem;
+    display: block;
+    background-color: white;
+    border-radius: 0.25rem;
+    width: 3.5rem;
+    padding: 0.22rem 0.4rem 0.1rem 0.4rem;
+    color: rgb(100, 100, 100);
+    font-size: 0.9rem;
+    line-height: 0.8rem;
+}
+.nav__button--profile {
+    padding: 0.1rem;
+    width: 1.4rem;
+    margin-right: 0;
+
+}
+.nav_button--selected {
+    background-color: #3DCAF2;
+    color: white;
+    font-weight: bold;
+}
+.nav__profile-icon {
+    width: 1.1rem;
+}
+.article-preview__box {
+    line-height: 1.2rem;
+    background-color: rgb(255, 255, 255);
+    border-radius: 0.4rem;
+    padding: 0.5rem;
+    margin-bottom: 0.8rem;
+    font-size: 14px;
+}
+.article-preview__by-at {
+    display: flex;
+    justify-content: space-between;
+}
+.article-preview__article-title {
+    margin-top: 0.1rem;
+    margin-bottom: 0.8rem;
+    font-size: 20px;
+    line-height: 1.6rem;
+}
+.vote__button {
+    background-color: white;
+    border: none;
+}
+.article-preview__commentcount-box {
+    display: flex;
+    justify-content: space-between;
+}
+.vote__arrow {
+    height: 1rem;
+    width: 1rem;
+    position: relative;
+    top: 0.15rem;
+}
+.article-preview__preview-text {
+    margin-left: 0.8rem;
+    margin-right: 0.8rem;
+    font-size: 14px;
+}
+.article-preview__author-category {
+    margin-bottom: 0.5rem;
+}
+.page-buttons__box {
+    padding-bottom: 1rem;
+}
+.page-buttons button {
+    border: none;
+    background-color: rgb(242, 246, 250);
+}
+.article-preview__time {
+    font-size: 10px;
+}
+
+.topics__slug {
     font-size: 22px;
     margin-bottom: 0.8rem;
     margin-top: 1.2rem;
     font-weight: bold;
 }
-.topic-description {
+.topics__description {
     margin-bottom: 2rem;
     margin-left: 0.5rem;
 }
-select {
-    border-radius: 2px;
-    border: none;
-    font-family: 'Barlow';
-    font-size: 11px;
-    padding: 1px;
-    margin-left: 3px;
-    margin-right: 3px;
-}
-.avatar {
+
+.user-preview__avatar {
     max-width: 150px;
     max-height: 200px;
 }
-textarea {
-    margin-left: 5px;
-}
-.user-list-box {
+
+.user-preview__box {
     background-color: white;
     border-radius: 0.4rem;
     padding: 0.5rem;
@@ -211,61 +220,51 @@ form select {
     margin-left: 0.7rem;
     padding: 5px;
 }
-textarea {
-    border: none;
-    width: 22rem;
-    height: 14rem;
-    vertical-align: top;
-    margin-left: 1rem;
-    font-family: 'Barlow';
-}
 form .white-button {
     margin-left: 2.3rem;
 }
-.topic-title {
+
+.articles__topic-title {
     margin-top: 0;
 }
-.loading-container {
+.loader__wrapper {
     display: flex;
     justify-content: center;
 }
 article {
     line-height: 1.5rem;
 }
-.single-article-title {
+.article__title {
     line-height: 2rem;
 }
-.vote-buttons {
+.vote__buttons-box {
     background-color: white;
     width: fit-content;
     border-radius: 5px;
     padding: 2px;
     padding-left: 8px;
 }
-.article-body {
+.article__body-box {
     margin-top: 1rem;
 }
-#comment-body {
+.article__comment-field {
     height: 10rem;
 }
-.comment-block {
+.comment__box {
     background-color: white;
     border-radius: 0.4rem;
     padding: 0.5rem;
     padding-right: 2rem;
     margin-bottom: 0.8rem;
 }
-.comment-info {
+.comment__by-at {
     margin-bottom: 0.4rem;
     font-size: 14px;
 }
-.delete-edit {
+.account__box button {
     margin-right: 1rem;
 }
-.edit-account button {
-    margin-right: 1rem;
-}
-.own-comment {
+.comment__by-author-box {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
